Bug 104529: on OS/2, when writing to the command-line console, we must write \r\n to go to a new line. So we need to translate \n to \r\n. The patch is contributed by Julien Pierre.